# es_pcs_2026

esercitazione1/: CMakeLists.txt  media_temp.cpp  terminal_input.cpp
esercitazione10/: CMakeLists.txt  discesa_gradiente.cpp  gradiente_coniugato.hpp  main.cpp
esercitazione2/: CMakeLists.txt  bubble_sort.cpp  esercizio1.cpp  esercizio2.cpp  output.txt
esercitazione3/: CMakeLists.txt  README.md  main.cpp  rational.hpp  test.cpp
esercitazione4/: CMakeLists.txt  algos.hpp  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp  utils.hpp
esercitazione5/: CMakeLists.txt  algos.hpp  measure.cpp  measure_small.cpp  merge_sort.hpp  osservazioni.txt  quick_sort.hpp  quick_sort_hybrid.hpp  test_mergesort.cpp  test_quicksort.cpp  utils.hpp
esercitazione8/: CMakeLists.txt  test_edge.cpp  test_graph.cpp  unidirected_graph.hpp
esercitazione9/: CMakeLists.txt  dijkstra.hpp  recursive_dfs.hpp  test_visita.cpp
prova_finale/: .gitignore  CMakeLists.txt  README.md
prova_finale/source/: main.cpp
prova_finale/source/algos/cycles/: de_pina.hpp  dfs_based.hpp  dijkstra.hpp
prova_finale/source/algos/solver/: build_matrix.hpp  calc_voltage.hpp  gradiente_coniugato.cpp  gradiente_coniugato.hpp
prova_finale/source/algos/visit/: graph_visit.hpp  queue.hpp  stack.hpp
prova_finale/source/parser/: parser.cpp  parser.hpp
prova_finale/source/unidirected_graph/: component.hpp  dot_serializer.hpp  unidirected_edge.hpp  unidirected_graph.hpp
prova_finale/test/: test_cycles.cpp  test_graph.cpp  test_harness.hpp  test_parser.cpp  test_solver.cpp
prova_finale/test/netlists/: bad_type.txt  example_sec7.txt  malformed.txt  messy_sec7.txt  series_loop.txt
